Ended test for Report

--- a/backend/app/templates/ods_dimension_template.html
+++ b/backend/app/templates/ods_dimension_template.html
@@ -10,24 +10,8 @@
             size: A4;
             margin: 0;
         }
-
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Poppins', sans-serif;
-            width: 21cm;
-            height: 29.7cm;
-            margin: 0 auto;
-            box-sizing: border-box;
-            background-color: #ffffff;
-            color: #000;
-        }
-
-        .page {
-            padding: 2cm;
-            height: 100%;
-            box-sizing: border-box;
-            background-color: #F3DCB8;
+        .ods-page {
+            background-color: #f0f4e4;
         }
 
         .container-fluid {
@@ -113,17 +97,15 @@
                 height: 29.7cm;
                 margin: 0;
                 padding: 0;
-                background-color: #F3DCB8 !important;
             }
             .page {
                 page-break-after: always;
-                background-color: #F3DCB8 !important;
             }
         }
     </style>
 </head>
 <body>
-    <div class="page">
+    <div class="page ods-page">
         <!-- Introducción -->
         <h2>Introducción a los ODS</h2>
         <p>Con la adopción de la Agenda 2030 el 25 de septiembre de 2015 en Asamblea General de las Naciones Unidas, se estableció una visión transformadora para alcanzar el equilibrio en tres dimensiones: económica, social y ambiental; recogida en el documento final "Transformar nuestro mundo: la Agenda 2030 para el Desarrollo Sostenible". Donde además, se reconocía por primera vez el papel de la cultura en el desarrollo sostenible. Así, sus 17 objetivos y 169 metas, de alcance mundial y aplicación universal, serán la guía para la toma de decisiones en todos los países firmantes. Estos objetivos se engloban en cinco dimensiones interconectadas entre sí y cuyo fin es alcanzar el desarrollo sostenible.</p>
@@ -132,7 +114,7 @@
         <!-- Descripción de la Agenda 2030 -->
         <p>Con la adopción de la Agenda 2030 el 25 de septiembre de 2015 en Asamblea General de las Naciones Unidas, se estableció una visión transformadora para alcanzar el equilibrio en tres dimensiones: económica, social y ambiental; recogida en el documento final "Transformar nuestro mundo: la Agenda 2030 para el Desarrollo Sostenible". Donde además, se reconocía por primera vez el papel de la cultura en el desarrollo sostenible. Así, sus 17 objetivos y 169 metas, de alcance mundial y aplicación universal, serán la guía para la toma de decisiones en todos los países firmantes. Estos objetivos se engloban en cinco dimensiones interconectadas entre sí y cuyo fin es alcanzar el desarrollo sostenible.</p>
     </div>
-    <div class="page">
+    <div class="page ods-page">
         <!-- Imagen 5P -->
         <div class="text-center mb-4">
             <img src="{{ ods['5p'] }}" alt="Las 5 P del Desarrollo Sostenible" class="img-fluid">
@@ -143,7 +125,7 @@
         <p>Todos los ODS son igual de prioritarios y no podrán alcanzarse sin lograr cada uno de ellos.</p>
         <p>Los objetivos son universalmente aplicables a países en desarrollo y desarrollados. Los países se han comprometido a priorizar el progreso de los más rezagados.</p>
     </div>
-    <div class="page">
+    <div class="page ods-page">
         <p>Además, los ODS son el resultado del proceso de consultas más amplio y participativo de la historia de Naciones Unidas y representa el consenso multilateral entre gobiernos y actores diversos, como la sociedad civil, el sector privado y la academia.</p>
         <p>La creatividad, el conocimiento, la tecnología y los recursos financieros de todo el mundo son necesarios para alcanzar los ODS en todos los contextos.</p>
     
@@ -186,7 +168,7 @@
             <p><strong>ODS 5</strong>. Lograr la igualdad entre los géneros y empoderar a todas las mujeres y niñas.</p>
         </div>
     </div>
-    <div class="page">
+    <div class="page ods-page">
         <!-- PLANETA -->
         <h4>PLANETA</h4>
         <div class="text-center">
@@ -257,7 +239,7 @@
             <p><strong>ODS 11</strong>. Conseguir que las ciudades y los asentamientos humanos sean inclusivos, seguros, resilientes y sostenibles.</p>
         </div>
     </div>
-    <div class="page">
+    <div class="page ods-page">
 
         <!-- PAZ -->
         <h4>PAZ</h4>
@@ -283,7 +265,7 @@
             <p><strong>ODS 17</strong>. Fortalecer los medios de ejecución y revitalizar la alianza mundial para el desarrollo sostenible.</p>
         </div>
     </div>
-    <div class="page">
+    <div class="page ods-page">
 
         <!-- Contribución del patrimonio a los ODS -->
         <h3>Contribución del patrimonio a los ODS</h3>
@@ -299,7 +281,7 @@
             <li>El patrimonio inmaterial, incluyendo los conocimientos y habilidades locales, puede ayudar a reducir la exposición y la vulnerabilidad a fenómenos extremos relacionados con el clima y otros problemas y desastres ambientales.</li>
         </ul>
     </div>
-    <div class="page">
+    <div class="page ods-page">
         <ul>
             <li>El patrimonio, en particular los paisajes agrícolas y culturales, puede proporcionar servicios y beneficios a los ecosistemas, así como seguridad alimentaria y de sustento para millones de personas.</li>
             <li>El patrimonio es fundamental para garantizar vidas saludables y el bienestar para todo el mundo, en todas las edades, incluso en paisajes culturales, espacios públicos y áreas urbanas históricas.</li>
@@ -311,7 +293,7 @@
             <li>También puede reducir el consumo de energía la adopción de métodos, materiales y técnicas de construcción sostenibles tradicionales diseñadas en su momento para combatir el clima y compatibles con el estilo de vida local, y que además utilizaban materiales renovables y de origen local. Cuando los enfoques tradicionales no son sostenibles, se deben considerar las soluciones energéticas alternativas y respetuosas con el medioambiente.</li>
         </ul>
     </div>
-    <div class="page">
+    <div class="page ods-page">
         <ul>
             
             <li>El capital social, cultural y natural de los lugares patrimoniales juega un papel importante en la atracción de industrias creativas, empresas, habitantes y visitantes, fomentando el crecimiento económico y la prosperidad. Estas actividades económicas deben ser una oportunidad para crear empleo decente, fomentar el desarrollo económico inclusivo y local, y evitar la gentrificación.</li>
