--- a/backend/app/templates/resource_info_template.html
+++ b/backend/app/templates/resource_info_template.html
@@ -27,7 +27,6 @@
             padding: 2cm;
             height: 100%;
             box-sizing: border-box;
-            background-color: #F3DCB8;
         }
 
         .header {
@@ -53,7 +52,6 @@
             color: #000000;
             font-size: 1.2em;
             margin-bottom: 0.5cm;
-            border-bottom: 1px solid #F3DCB8;
             padding-bottom: 0.2cm;
             font-weight: bold;
             color: #000;
@@ -99,19 +97,17 @@
                 height: 29.7cm;
                 margin: 0;
                 padding: 0;
-                background-color: #F3DCB8 !important;
             }
             .page {
                 page-break-after: always;
-                background-color: #F3DCB8 !important;
             }
         }
     </style>
 </head>
 <body>
     <div class="page">
-        <div class="header">
-            <h1>Categorización del Recurso Patrimonial</h1>
+        <div class="simple-title">
+            Categorización del Recurso Patrimonial
         </div>
 
         <div class="info-section">
