--- a/backend/app/templates/material_topics_template.html
+++ b/backend/app/templates/material_topics_template.html
@@ -1,26 +1,8 @@
-<style>
-    .material-topics {
-        margin: 20px 0;
-    }
-    .dimension-title {
-        color: #333;
-        font-weight: bold;
-        margin-bottom: 15px;
-        border-bottom: 2px solid #ddd;
-        padding-bottom: 5px;
-    }
-    .topic-list {
-        padding-left: 20px;
-    }
-    .topic-title {
-        font-weight: bold;
-        color: #444;
-    }
-    .topic-description {
-        color: #666;
-        margin-top: 5px;
-    }
-</style>
+
+
+    
+    {{ material_topics_intro.text }}
+
     {% set dimensions = ['PLANETA', 'PERSONAS', 'PROSPERIDAD', 'PAZ', 'ALIANZAS'] %}
     {% for dimension in dimensions %}
         {% set dimension_topics = material_topics|selectattr('dimension', 'equalto', dimension)|list %}
