--- a/backend/app/templates/diagnosis_tables_template.html
+++ b/backend/app/templates/diagnosis_tables_template.html
@@ -36,7 +36,7 @@
                 <td>{% for ods in item['secondary_ODS'] %}{{ ods }}{% if not loop.last %}<br>{% endif %}{% endfor %}</td>
             </tr>
         </table>
-        <table style="margin-bottom:30px;width:100%">
+        <table class="table" style="margin-bottom:30px;width:100%">
             <tr>
                 <th colspan="2" style="background-color:#f0f0f0;">Indicadores cualitativos</th>
             </tr>
