--- a/backend/app/templates/ods_dimension_template.html
+++ b/backend/app/templates/ods_dimension_template.html
@@ -10,7 +10,7 @@
             margin: 0;
         }
         .ods-page {
-            background-color: #f0f4e4;
+            background-color: #FFFFFF;
         }
 
         .container-fluid {
@@ -113,7 +113,7 @@
     </div>
     <div class="page ods-page">
         <!-- PERSONAS -->
-        <p><span style="color: #706cb4">PERSONAS. </span>Poner fin a la pobreza y el hambre en todas sus formas y asegurar la dignidad e igualdad de todas las personas. En este apartado se engloban los siguientes ODS: </p>
+        <p><span style="color: #706cb4; font-weight: bold">PERSONAS. </span>Poner fin a la pobreza y el hambre en todas sus formas y asegurar la dignidad e igualdad de todas las personas. En este apartado se engloban los siguientes ODS: </p>
         <div class="text-center">
             
             <span style="display:inline-block; margin:0 10px;">
@@ -147,7 +147,7 @@
         </div>
 
         <!-- PLANETA -->
-        <p><span style="color: #08a44c">PLANETA. </span>La Agenda 2030 pretende proteger los recursos naturales del planeta y combatir el cambio climático para asegurar un ambiente digno para las futuras generaciones:</p>
+        <p><span style="color: #08a44c; font-weight: bold">PLANETA. </span>La Agenda 2030 pretende proteger los recursos naturales del planeta y combatir el cambio climático para asegurar un ambiente digno para las futuras generaciones:</p>
         <div class="text-center">
             <span style="display:inline-block; margin:0 10px;">
                 <img src="{{ ods['6'] }}" alt="ODS 6" class="img-fluid mb-2" style="max-width: 100px;">
@@ -186,7 +186,7 @@
         
 
         <!-- PROSPERIDAD -->
-        <p><span style="color: #e89c24">PROSPERIDAD. </span>Asegurar que todos puedan disfrutar de una vida próspera y plena en armonía con la naturaleza. Aquí quedarían englobados:</p>
+        <p><span style="color: #e89c24; font-weight: bold">PROSPERIDAD. </span>Asegurar que todos puedan disfrutar de una vida próspera y plena en armonía con la naturaleza. Aquí quedarían englobados:</p>
         <div class="text-center">
             
             <span style="display:inline-block; margin:0 10px;">
@@ -220,7 +220,7 @@
         </div>
 
         <!-- PAZ -->
-        <p><span style="color: #08acdc">PAZ. </span>Fomentar sociedades pacíficas, justas e inclusivas es esencial para la Agenda 2030:</p>
+        <p><span style="color: #08acdc; font-weight: bold">PAZ. </span>Fomentar sociedades pacíficas, justas e inclusivas es esencial para la Agenda 2030:</p>
         <div class="text-center">
             <span style="display:inline-block; margin:0 10px;">
                 <img src="{{ ods['16'] }}" alt="ODS 16" class="img-fluid mb-2" style="max-width: 100px;">
@@ -232,7 +232,7 @@
         </div>
 
         <!-- ALIANZAS -->
-        <p><span style="color: #c04c94">ALIANZAS. </span>Implementar la Agenda 2030 a través de alianzas globales sólidas:</p>
+        <p><span style="color: #c04c94; font-weight: bold">ALIANZAS. </span>Implementar la Agenda 2030 a través de alianzas globales sólidas:</p>
         <div class="text-center">
             <span style="display:inline-block; margin:0 10px;">
                 <img src="{{ ods['17'] }}" alt="ODS 17" class="img-fluid mb-2" style="max-width: 100px;">
